delete the search bar of account page

--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -565,20 +565,21 @@
             <img class="p_absolute one wow fadeInRight" src="../static/img/home_one/b_man_two.png" alt="">
             <img class="p_absolute two wow fadeInUp" data-wow-delay="0.2s" src="../static/img/home_one/flower.png" alt="">
             <div class="container custom_container">
-                <form action="#" class="banner_search_form banner_search_form_two">
-                    <div class="input-group">
-                        <input type="search" class="form-control" placeholder='Search ("/" to focus)'>
-                        <div class="input-group-append">
-                            <select class="custom-select" id="inlineFormCustomSelect">
-                                <option selected>All Category</option>
-                                <option value="1">Doc Archive</option>
-                                <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
-                            </select>
-                        </div>
-                        <button type="submit"><i class="icon_search"></i></button>
-                    </div>
-                </form>
+<!--                Search bar-->
+<!--                <form action="#" class="banner_search_form banner_search_form_two">-->
+<!--                    <div class="input-group">-->
+<!--                        <input type="search" class="form-control" placeholder='Search ("/" to focus)'>-->
+<!--                        <div class="input-group-append">-->
+<!--                            <select class="custom-select" id="inlineFormCustomSelect">-->
+<!--                                <option selected>All Category</option>-->
+<!--                                <option value="1">Doc Archive</option>-->
+<!--                                <option value="2">Doc List</option>-->
+<!--                                <option value="3">KbDoc</option>-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                        <button type="submit"><i class="icon_search"></i></button>-->
+<!--                    </div>-->
+<!--                </form>-->
             </div>
         </section>
         <section class="page_breadcrumb">
