--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -81,7 +81,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-12 text-center">
-                                <button type="submit" class="btn action_btn thm_btn">Create an account</button>
+                                <button type="button" onclick="validateForm()">Sign in</button> <!-- Sign in button -->
+                                <button type="submit" class="btn action_btn thm_btn" >Create an account</button>
                             </div>
                         </form>
                     </div>
@@ -183,14 +184,17 @@
             })
                     .then(response => {
                         if (response.ok) {
-                            window.location.href = '/'; // Redirect to homepage if registration is successful
-                        } else if (response.status === 400) {
-                            emailError.style.display = "inline";
+                            window.location.href = '/'; // 注册成功后重定向
                         } else {
-                            alert('Failed to sign up. Please try again.'); // Alert in case of failure
+                            response.json().then(data => {
+                                alert(`Error: ${data.message}`);
+                            });
                         }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
                     });
-        }
+
     </script>
 </body>
 
