--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
     <title>KbDoc</title>
+    <style>
+    .sign_right {
+        background-image: url("../static/images/background5.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+    }
+</style>
 </head>
 
 <body data-scroll-animation="true">
@@ -35,43 +43,60 @@
             <div class="row ml-0 mr-0">
                 <div class="sign_left signup_left">
                     <h2>We are design changers do what matters.</h2>
-                    <img class="position-absolute top" src="../static/img/signup/top_ornamate.png" alt="top">
-                    <img class="position-absolute bottom" src="../static/img/signup/bottom_ornamate.png" alt="bottom">
-                    <img class="position-absolute middle wow fadeInRight" src="../static/img/signup/man_image.png" alt="bottom">
-                    <div class="round wow zoomIn" data-wow-delay="0.2s"></div>
+
+                    <div class="round"></div>
+                    <div class="avatar-name">
+                        <img class="avatar-img" src="../static/images/Boran.jpg" alt="Boran">
+                        <span class="name">Boran Duan</span>
+                    </div>
+                    <div class="avatar-name-wenyi">
+                    <span class="name">Qiyue Zhu</span>
+                    <img class="avatar-img" src="../static/images/Qiyue.jpg" alt="Qiyue">
+                    </div>
+                    <div class="avatar-name-yani">
+                        <img class="avatar-img" src="../static/images/Wenyi.jpg" alt="Wenyi">
+                        <span class="name">Wenyi Liang</span>
+                    </div>
+                    <div class="avatar-name-wenyi">
+                    <span class="name">Yani Yang</span>
+                    <img class="avatar-img" src="../static/images/Yani.jpg" alt="Yani">
+                    </div>
+                    <div class="avatar-name-yani">
+                        <img class="avatar-img" src="../static/images/Zihan.jpg" alt="Zihan">
+                        <span class="name">Zihan Miao</span>
+                    </div>
                 </div>
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
-                            <h3>Create your KbDoc Account</h3>
-                            <p>Already have an account? <a href="/signin">Sign in</a></p>
-                            <a href="#" class="btn-google"><img src="../static/img/signup/gmail.png" alt=""><span class="btn-text">Sign up with Google</span></a>
-                        </div>
+                            <h3>&nbsp;&nbsp;&nbsp;HerBlossom</h3>
+                            <br>
+                            </div>
                         <div class="divider">
-                            <span class="or-text">or</span>
+                            <span class="or-text"></span>
                         </div>
                         <form action="#" class="row login_form">
                             <div class="col-sm-6 form-group">
-                                <div class="small_text">First name</div>
+                                <div class="small_text">❥ First name</div>
                                 <input type="text" class="form-control" name="name" id="name" placeholder="Please enter your name" required>
                             </div>
                             <div class="col-sm-6 form-group">
-                                <div class="small_text">Last name</div>
+                                <div class="small_text">❥ Last name</div>
                                 <input type="text" class="form-control" name="lname" id="lname" placeholder="Jewel">
                             </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Your email</div>
+                                <div class="small_text">❥ Your email</div>
                                     <input type="email" class="form-control" id="email" name="email" placeholder="Please enter your email" required oninput="checkEmail()" style="width: 100%; padding-right: 130px;">
                                                     <span id="email-error" style="color: red; font-size: small; position: absolute; top: 50%; right: 10px; transform: translateY(-50%); display: none;">
                                                         Email already exists
                                                     </span>
                             </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Password</div>
+                                <div class="small_text">❥ Password</div>
                                 <input type="password" class="form-control" id="password" name="password" placeholder="Please enter your password" required>
                                    </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Confirm password</div>
+                                <div class="small_text">❥ Confirm password</div>
                                 <input type="password" class="form-control" id="verify-password" name="verify-password" placeholder="Please verify your password" required>
                             </div>
                             <div class="col-lg-12 form-group">
@@ -79,11 +104,14 @@
                                     <input type="checkbox" value="None" id="squared2" name="check">
                                     <label class="l_text" for="squared2">I accept the <span>politic of confidentiality</span></label>
                                 </div>
+                                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Already have an account? <a href="/signin">Sign in</a></p>
+
                             </div>
                             <div class="col-lg-12 text-center">
                                 <button type="button" onclick="validateForm()">Sign in</button> <!-- Sign in button -->
                                 <button type="submit" class="btn action_btn thm_btn" >Create an account</button>
                             </div>
+
                         </form>
                     </div>
                 </div>
