--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -82,8 +82,7 @@
                             </div>
                             <div class="col-lg-12 text-center">
                                 <button type="button" onclick="validateForm()">Sign in</button> <!-- Sign in button -->
-                                <button type="submit" class="btn action_btn thm_btn" >Create an account</button>
-                            </div>
+                                 </div>
                         </form>
                     </div>
                 </div>
@@ -184,16 +183,14 @@
             })
                     .then(response => {
                         if (response.ok) {
-                            window.location.href = '/'; // 注册成功后重定向
+                            window.location.href = '/'; // Redirect to homepage if registration is successful
+                        } else if (response.status === 400) {
+                            emailError.style.display = "inline";
                         } else {
-                            response.json().then(data => {
-                                alert(`Error: ${data.message}`);
-                            });
+                            alert('Failed to sign up. Please try again.'); // Alert in case of failure
                         }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
                     });
+        }
 
     </script>
 </body>
