change css register3

--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -39,11 +39,10 @@
         </div>
     </div>
     <div class="body_wrapper">
-        <section class="signup_area signup_area_height">
+         <section class="signup_area">
             <div class="row ml-0 mr-0">
-                <div class="sign_left signup_left">
+                <div class="sign_left signin_left">
                     <h2>We are design changers do what matters.</h2>
-
                     <div class="round"></div>
                     <div class="avatar-name">
                         <img class="avatar-img" src="../static/images/Boran.jpg" alt="Boran">
