--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -104,9 +104,11 @@
                                     <input type="checkbox" value="None" id="squared2" name="check">
                                     <label class="l_text" for="squared2">I accept the <span>politic of confidentiality</span></label>
                                 </div>
-                                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Already have an account? <a href="/signin">Sign in</a></p>
-
-                            </div>
+                                <div style="text-align: right;">
+                                    <p>Already have an account? <a href="/signin">Sign in</a></p>
+                                <br>
+                                </div>
+                                </div>
                             <div class="col-lg-12 text-center">
                                 <button type="button" class="btn action_btn thm_btn" onclick="validateForm()">Sign in</button> <!-- Sign in button -->
                             </div>
