--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -277,6 +277,7 @@
                                 <li class="nav-item"><a href="forums.html" class="nav-link">Forums Root</a></li>
                                 <li class="nav-item"><a href="forum-topics.html" class="nav-link">Forum Topics</a></li>
                                 <li class="nav-item active"><a href="forum-single.html" class="nav-link">Forum Single</a></li>
+                                <li class="nav-item"><a href="post-edit.html" class="nav-link">Edit Post</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown submenu">
@@ -435,7 +436,7 @@
                         </div>
                         <div class="forum-post-content">
                             <div class="content">
-                                <p>Daft blimey cor blimey guvnor jolly good don't get shirty with me what a load of rubbish no biggie ruddy cuppa cheesed off bleeding, arse spiffing it's your round codswallop gormless off his nut bodge I smashing, mufty chancer Oxford my good sir bobby it's all gone to pot bite your arm off wind up Harry. Blatant A bit of how's your father it's your round are you taking the piss gutted mate codswallop golly gosh, James Bond I old chimney pot is bum bag do one, fanny around crikey pukka tomfoolery nancy boy. Spiffing good time burke give us a bell absolutely bladdered gutted mate tosser cuppa happy days Harry young delinquent amongst car boot, baking cakes cheesed off I down the pub what a load of rubbish such a fibber knees up me old mucker wind up smashing. My lady cheeky faff about what a plonker so I said pardon you chimney pot cheesed off haggle quaint, cup of tea gormless excuse my French mush bleeding knackered squiffy mush, such a fibber dropped a clanger jolly good he lost his bottle vagabond no biggie fanny around brilliant. Chip shop absolutely bladdered cockup up the kyver cracking goal is pardon you cuppa easy peasy the full monty the bee's knees blatant, bugger pear shaped a load of old tosh zonked give us a bell up the duff bleeder fantastic James Bond chap. Off his nut the BBC mufty hotpot my lady I super tomfoolery nancy boy, loo fanny around bits and bobs nice one only a quid Eaton blow off barmy, knees up bobby cup of char barney a no biggie gormless.</p>
+                                <p>Daft.</p>
                             </div>
                             <div class="forum-post-btm">
                                 <div class="taxonomy forum-post-tags">
@@ -445,6 +446,58 @@
                                     <img src="../static/img/forum/logo-favicon.png" alt=""><a href="#">KbDoc Support</a>
                                 </div>
                             </div>
+                            <!-- 新增图片展示区域（最多9张图片） -->
+                            <div class="post-images">
+                                <ul class="image-grid">
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片1">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片2">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片3">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片4">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片5">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片6">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片7">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片8">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../static/img/forum/author-avatar.png" data-lightbox="post-gallery">
+                                            <img src="../static/img/forum/author-avatar.png" alt="图片9">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+
+
                             <div class="action-button-container action-btns">
                                 <a href="#" class="action_btn btn-ans ask-btn reply-btn">Reply</a>
                                 <a href="#" class="action_btn btn-ans ask-btn too-btn">I have this question too (20)</a>
@@ -678,55 +731,6 @@
                                     </ul>
                                 </div>
                                 <!-- /.open-hours -->
-                            </div>
-
-                            <div class="widget usefull_links_widget">
-                                <h4 class="c_head">Usefull Links</h4>
-
-                                <ul class="list-unstyled usefull-links">
-                                    <li><i class="icon_lightbulb_alt"></i><a href="#">FAQs</a></li>
-                                    <li><i class="icon_clock_alt"></i><a href="#">Popular</a></li>
-                                    <li><i class="icon_piechart"></i><a href="#">Recent</a></li>
-                                    <li><i class="icon_info_alt"></i><a href="#">Unanswered</a></li>
-                                </ul>
-                            </div>
-                            <div class="widget ticket_widget">
-                                <h4 class="c_head">Ticket Categories</h4>
-
-                                <ul class="list-unstyled ticket_categories">
-                                    <li><img src="../static/img/home_support/cmm5.png" alt="category"><a href="#">Docs WordPress
-                                            Theme</a> <span class="count">10</span></li>
-                                    <li><img src="../static/img/home_support/cmm4.png" alt="category"><a href="#">Product Landing
-                                            Page</a><span class="count count-fill">13</span><span
-                                            class="count">54</span></li>
-                                    <li><img src="../static/img/home_support/cmm2.png" alt="category"><a href="#">Knowledge base
-                                            Template</a><span class="count">142</span></li>
-                                    <li><img src="../static/img/home_support/cmm8.png" alt="category"><a href="#">Startup and App
-                                            WP Theme</a> <span class="count">13</span></li>
-                                    <li><img src="../static/img/home_support/cmm9.png" alt="category"><a href="#">Clean Email
-                                            Template</a> <span class="count">123</span></li>
-                                    <li><img src="../static/img/home_support/cmm10.png" alt="category"><a href="#">Apps WordPress
-                                            Theme</a> <span class="count">18</span></li>
-                                </ul>
-                            </div>
-
-                            <div class="widget tag_widget">
-                                <h4 class="c_head">Tags</h4>
-                                <ul class="list-unstyled w_tag_list style-light">
-                                    <li><a href="#">Swagger</a></li>
-                                    <li><a href="#">KbDoc</a></li>
-                                    <li><a href="#">weCare</a></li>
-                                    <li><a href="#">Business</a></li>
-                                    <li><a href="#">Download</a></li>
-                                    <li><a href="#">Doc</a></li>
-                                    <li><a href="#">WordPress</a></li>
-                                    <li><a href="#">Design</a></li>
-                                    <li><a href="#">ui/ux</a></li>
-                                    <li><a href="#">Doc Design</a></li>
-                                    <li><a href="#">DocAll</a></li>
-                                    <li><a href="#">Productboard</a></li>
-                                    <li><a href="#">Magento</a></li>
-                                </ul>
                             </div>
 
                         </div>
