Update a very very very basic Forum page

--- a/code/templates/forums.html
+++ b/code/templates/forums.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc - Forums Root</title>
+    <title>HerBlossom - Forums Root</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -26,7 +26,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>KbDoc</span></h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">Did You Know?</h2>
@@ -289,7 +289,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -361,7 +361,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -569,9 +569,9 @@
                                     </div>
                                     <div class="entry-content">
                                         <h3 class="post-title">
-                                            <a href="forum-topics.html">KbDoc Support</a>
+                                            <a href="forum-topics.html">HerBlossom Support</a>
                                         </h3>
-                                        <p>Get support for KbDoc knowledge-base and documentation template.</p>
+                                        <p>Get support for HerBlossom knowledge-base and documentation template.</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 post-meta-wrapper">
@@ -701,7 +701,7 @@
                                 <h4 class="c_head">Tags</h4>
                                 <ul class="list-unstyled w_tag_list style-light">
                                     <li><a href="#">Swagger</a></li>
-                                    <li><a href="#">KbDoc</a></li>
+                                    <li><a href="#">HerBlossom</a></li>
                                     <li><a href="#">weCare</a></li>
                                     <li><a href="#">Business</a></li>
                                     <li><a href="#">Download</a></li>
@@ -772,7 +772,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -811,7 +811,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
