--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>Her Blossom</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -259,17 +259,17 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown submenu">
-                        <a class="nav-link dropdown-toggle" href="forums.html" role="button" data-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="/forum" role="button" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">
                             Forum
                         </a>
-                        <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false"
+                        <!-- <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false"
                            data-toggle="dropdown"></i>
                         <ul class="dropdown-menu">
                             <li class="nav-item"><a href="forums.html" class="nav-link">Forums Root</a></li>
                             <li class="nav-item"><a href="forum-topics.html" class="nav-link">Forum Topics</a></li>
                             <li class="nav-item"><a href="forum-single.html" class="nav-link">Forum Single</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -281,7 +281,7 @@
                                 <a href="doc-archive.html" class="nav-link">
                                     <img src="../static/img/tick.png" alt="">
                                     <div class="text">
-                                        <h5>KbDoc</h5>
+                                        <h5>HerBlossom</h5>
                                         <p>Launch Simple Websites</p>
                                     </div>
                                 </a>
@@ -410,7 +410,7 @@
                             <li><a href="#"><i class="icon_document_alt"></i>Mailbox and User Settings</a></li>
                             <li><a href="#"><i class="icon_document_alt"></i>Preparing your server for installation</a>
                             </li>
-                            <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in KbDoc</a></li>
+                            <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in HerBlossom</a></li>
                             <li><a href="#"><i class="icon_document_alt"></i>How do i add FAQ post</a></li>
                             <li><a href="#"><i class="icon_document_alt"></i>Creating home page blocks</a></li>
                         </ul>
@@ -425,9 +425,9 @@
                         </div>
                         <ul class="list-unstyled tag_list">
                             <li><a href="#"><i class="icon_document_alt"></i>Do I need to know coding</a></li>
-                            <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in KbDoc</a></li>
+                            <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in HerBlossom</a></li>
                             <li><a href="#"><i class="icon_document_alt"></i>Working with Conversations</a></li>
-                            <li><a href="#"><i class="icon_document_alt"></i>Copying Email to KbDoc</a></li>
+                            <li><a href="#"><i class="icon_document_alt"></i>Copying Email to HerBlossom</a></li>
                             <li><a href="#"><i class="icon_document_alt"></i>Knowledgebase page setup</a></li>
                         </ul>
                         <a href="#" class="doc_border_btn">More<i class="arrow_right"></i></a>
@@ -1471,7 +1471,7 @@
                                 <li><a href="#">Affiliates</a></li>
                                 <li><a href="#">Partners</a></li>
                                 <li><a href="#">Careers</a></li>
-                                <li><a href="#">KbDoc for Good</a></li>
+                                <li><a href="#">HerBlossom for Good</a></li>
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
@@ -1510,7 +1510,7 @@
         </div>
         <div class="footer_bottom text-center">
             <div class="container">
-                <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
             </div>
         </div>
     </footer>
